subdir=scripts

EXTRA_DIST= \
	benchmark.sh \
	build_optimized.sh \
	callgrind.sh \
	configure_for_debug.sh \
	dev_brute_tests.sh \
	devtests.sh \
	dist_long_indices.sh \
	dist_nofortran.sh \
	dist_serial.sh \
	dist.sh \
	doc-tests.sh \
	eda.sh \
	gcov_run.sh \
	gcov.sh \
	gendense.sh \
	genstrided.sh \
	gprof.sh \
	hinfo.sh \
	librsb-here.sh \
	likwid.sh \
	linux-sys-cache.sh \
	matrices_get.sh \
	mmhead.sh \
	mmpci2gen.sh \
	mmsym2gen.sh \
	nightly.sh \
	plot_test.sh \
	readme-tests.sh \
	rsb_h_to_rsb_fi.sh \
	rsb_h_to_rsb_py.sh \
	rsbmanseealso.sh \
	scalasca.sh \
	score_p.sh \
	static-libs.sh \
	test_bug_58957.sh \
	test_configure.sh \
	test_misc.sh \
	test.sh \
	versions.sh \
	 \
	librsb.module.m4 \
	 \
	plot.gpi \
	 \
	plot_sample.dat \
	 \
	plot_sample.log \
	 \
	example_batch_job.slurm \
	 \
	librsb_gcc11.cocci \
		 \
	librsb_gcc11.awk \
	rsbmandesc.awk
